@@ -393,6 +393,47 @@ sub validate_edit {
 
 };
 
+=item B<parse_change_comment>
+
+    my $change_comment = parse_change_comment($string, $base_url);
+    
+Given a base URL (for example, C<http://example.com/wiki.cgi?>), takes a string, 
+replaces C<[[page]]> and C<[[page|titled link]]> with
+
+    <a href="http://example.com/wiki.cgi?page">page</a>
+
+and
+
+    <a href="http://example.com/wiki.cgi?page">titled link</a>
+
+respectively, and returns it. This is a limited subset of wiki markup suitable for
+use in page change comments.
+
+=cut
+
+sub parse_change_comment {   
+    my ($comment, $base_url) = @_;
+
+    my @links = $comment =~ m{\[\[(.*?)\]\]}g;
+
+    # It's not all that great having to reinvent the wheel in this way, but
+    # Text::WikiFormat won't let you specify the subset of wiki notation that 
+    # you're interested in. C'est la vie.
+    foreach (@links) {
+        if (/(.*?)\|(.*)/) {
+            my ($page, $title) = ($1, $2);
+            $comment =~ s{\[\[$page\|$title\]\]}
+                         {<a href="$base_url$page">$title</a>};
+        } else {
+            my $page = $_;
+            $comment =~ s{\[\[$page\]\]}
+                         {<a href="$base_url$page">$page</a>};
+        }
+    }
+
+    return $comment;
+}
+
 =item B<send_email>
 
     eval { OpenGuides::Utils->send_email(
@@ -420,6 +461,7 @@ Debugging: if C<return_output> is true, the message will be returned as
 a string instead of being sent by email.
 
 =cut
+
 
 sub send_email {
     my ( $self, %args ) = @_;
