@@ -4,6 +4,8 @@ More detailed changelogs can be found at
 <http://dev.openguides.org/log/trunk>.
 
 0.62    
+        Allow wiki page links (simple: [[Foo]], title: [[Foo|bar]]) in
+          change summaries.
         Ensure that all modules we ship are versioned.
         Added experimental support for local IP blacklisting modules; see the
           display_node method in "perldoc OpenGuides" for details.
